--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ main {
   object-fit: contain;
 }
 
+img {
+  width: 200px;
+  height: 400px;
+  object-fit: cover;
+}
+
 /* /MAIN */
 
 /* FOOTER */
