--- a/classes/MATH132/style.css
+++ b/classes/MATH132/style.css
@@ -79,11 +79,13 @@ table.homework {
 table.tablewithcolspacing  td {
     padding: 0 15px 0 15px;
 }
+/*
 table.calendar {
     border-collapse: collapse;
 }
+*/
 table.calendar td,th {
-    padding: 8px;
+    padding: 4px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
